# pisci-engine

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
pisci-cli/: Cargo.toml
pisci-cli/src/: args.rs  host.rs  interactive.rs  lib.rs  rpc_server.rs  runner.rs
pisci-cli/tests/: headless_cli.rs  pool_tools_headless.rs
pisci-core/: Cargo.toml
pisci-core/src/: heartbeat.rs  host.rs  integration.rs  koi_prompt.rs  lib.rs  models.rs  project_state.rs  scene.rs  trial.rs
pisci-core/tests/: collab_trial.rs
pisci-kernel/: Cargo.toml
pisci-kernel/src/: lib.rs  notify.rs  project_context.rs
pisci-kernel/src/agent/: bench_compact.rs  compaction_eval.rs  compaction_strategy.rs  file_journal.rs  hooks.rs  loop_.rs  message_utils.rs  messages.rs  mod.rs  plan.rs  state_frame.rs  summary_worker.rs  tool.rs  tool_receipt.rs
pisci-kernel/src/agent/harness/: budget.rs  config.rs  context_builder.rs  layered_prompt.rs  mod.rs
pisci-kernel/src/context/: mod.rs
pisci-kernel/src/headless/: mod.rs
pisci-kernel/src/llm/: deepseek.rs  kimi.rs  mod.rs  openai.rs  qwen.rs
pisci-kernel/src/memory/: mod.rs  plugin.rs  vector.rs
pisci-kernel/src/policy/: gate.rs  mod.rs
pisci-kernel/src/pool/: coordinator.rs  git.rs  koi_execute_todo.tmpl  metadata.rs  mod.rs  model.rs  services.rs  subagent.rs
pisci-kernel/src/scheduler/: cron.rs
pisci-kernel/src/store/: db.rs  settings.rs
pisci-kernel/src/tools/: code_run.rs  elevate.rs  email.rs  file_diff.rs  mcp.rs  mod.rs  pdf.rs  plan_todo.rs  pool_chat.rs  pool_org.rs  process_control.rs  shell.rs  ssh.rs  user_tool.rs
pisci-kernel/tests/: pool_services.rs
piscis-cli/: Cargo.toml
piscis-cli/src/: args.rs  host.rs  interactive.rs  lib.rs  rpc_server.rs  runner.rs
piscis-cli/tests/: headless_cli.rs  pool_tools_headless.rs
piscis-core/: Cargo.toml
piscis-core/src/: heartbeat.rs  host.rs  integration.rs  koi_prompt.rs  lib.rs  models.rs  project_state.rs  scene.rs
piscis-core/tests/: collab_trial.rs
piscis-ide-tools/: Cargo.toml
piscis-ide-tools/src/: lib.rs
piscis-ide-tools/src/lsp/: bridge.rs  manager.rs  mod.rs
piscis-ide-tools/src/tools/: mod.rs
piscis-kernel/: Cargo.toml
piscis-kernel/src/: lib.rs  notify.rs  project_context.rs
piscis-kernel/src/agent/: bench_compact.rs  compaction.rs  compaction_eval.rs  contrib.rs  file_journal.rs  hooks.rs  loop_.rs  loop_strategy.rs  message_utils.rs  messages.rs  mod.rs  plan.rs  plan_doc.rs  rule_preprocess.rs  state_frame.rs  tool.rs  tool_receipt.rs  vision.rs
piscis-kernel/src/agent/harness/: config.rs  context_builder.rs  layered_prompt.rs  mod.rs  request_builder.rs  runner.rs
piscis-kernel/src/context/: mod.rs
piscis-kernel/src/headless/: mod.rs
piscis-kernel/src/llm/: claude.rs  minimax.rs  mod.rs  openai.rs  zhipu.rs
piscis-kernel/src/memory/: plugin.rs
piscis-kernel/src/pool/: coordinator.rs  git.rs  koi_execute_todo.tmpl  metadata.rs  mod.rs  model.rs  services.rs  store.rs  subagent.rs
piscis-kernel/src/security/: injection.rs  mod.rs  secrets.rs
piscis-kernel/src/store/: db.rs  mod.rs  settings.rs
piscis-kernel/src/tools/: code_run.rs  elevate.rs  file_diff.rs  file_list.rs  file_read.rs  file_search.rs  file_write.rs  mcp.rs  memory_tool.rs  mod.rs  output.rs  pdf.rs  plan_todo.rs  plan_write.rs  pool_chat.rs  pool_org.rs  process_control.rs  recall_tool.rs  shell.rs  vision_context.rs  web_fetch.rs  web_search.rs
piscis-kernel/tests/: pool_services.rs
