[workspace]
members = ["pisci-core", "pisci-kernel", "pisci-cli"]
resolver = "2"

# Workspace-wide lint policy. `cargo clippy --workspace` will treat all of
# the rust warnings and the selected clippy lints below as hard errors, so
# dead code / unused imports / obvious bugs can never sneak back in without
# an explicit `#[allow(...)]` annotation at the call site.
[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
needless_return = "allow"
module_inception = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
# Shared across workspace members
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Engine crates (path deps so external consumers — openpisci, codez — can
# point at this workspace and pick up the same versions).
pisci-core = { path = "pisci-core" }
pisci-kernel = { path = "pisci-kernel" }
pisci-cli = { path = "pisci-cli" }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
