[package]
name = "pisci-cli"
version = "0.7.2"
edition = "2021"
description = "OpenPisci headless CLI — cross-platform agent runner with no Tauri / GUI dependency."

# Published CLI binary. `pisci-desktop` owns the GUI app; this crate owns the
# only headless/sidecar executable shipped with releases.

[[bin]]
name = "openpisci-headless"
path = "src/bin/openpisci-headless.rs"

[dependencies]
pisci-core = { workspace = true }
pisci-kernel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "5"

[lints]
workspace = true
