[package]
name = "pisci-cli"
version = "0.7.6"
edition = "2021"
description = "OpenPisci headless CLI - cross-platform agent runner with no Tauri / GUI dependency."

# Published CLI binary. `pisci-desktop` owns the GUI app; this crate owns the
# optional headless executable used for CLI, CI, evals, and automation.

[[bin]]
name = "openpisci-headless"
path = "src/bin/openpisci-headless.rs"

[[bin]]
name = "pisci_compact_one"
path = "src/bin/pisci_compact_one.rs"
required-features = ["bench-compact-cli"]

[features]
default = []
bench-compact-cli = ["dep:pisci-desktop"]

[dependencies]
pisci-core = { workspace = true }
pisci-kernel = { workspace = true }
pisci-desktop = { path = "..", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "5"

[lints]
workspace = true
