[package]
name = "pisci-cli"
version = "0.7.7"
edition = "2021"
description = "OpenPisci headless CLI - cross-platform agent runner with no Tauri / GUI dependency."

# Published CLI binary. `pisci-desktop` owns the GUI app; this crate owns the
# optional headless executable used for CLI, CI, evals, and automation.

[[bin]]
name = "openpisci-headless"
path = "src/bin/openpisci-headless.rs"

# NOTE: the desktop-coupled `pisci_compact_one` bench binary (and its
# `bench-compact-cli` feature) was intentionally left behind in the
# `openpisci` repo when this engine was extracted — it depends on
# `pisci-desktop`, which is a host crate that lives outside this engine.

[features]
default = []

[dependencies]
pisci-core = { workspace = true }
pisci-kernel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "5"

[lints]
workspace = true
