[package]
name = "piscis-cli"
version = "0.8.38"
edition = "2021"
description = "OpenPiscis headless CLI - cross-platform agent runner with no Tauri / GUI dependency."

# Published CLI binary. `piscis-desktop` owns the GUI app; this crate owns the
# optional headless executable used for CLI, CI, evals, and automation.

[[bin]]
name = "openpiscis-headless"
path = "src/bin/openpiscis-headless.rs"

# NOTE: the desktop-coupled `piscis_compact_one` bench binary (and its
# `bench-compact-cli` feature) was intentionally left behind in the
# `openpiscis` repo when this engine was extracted — it depends on
# `piscis-desktop`, which is a host crate that lives outside this engine.

[features]
default = []

[dependencies]
piscis-core = { workspace = true }
piscis-kernel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "5"

[lints]
workspace = true
